--- a/css/main.css
+++ b/css/main.css
@@ -1,43 +1,78 @@
 @charset "utf-8";
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-a{
-    color: #444;
-    text-decoration: none;
+a {
+  color: #444;
+  text-decoration: none;
 }
-.wrap{
-    width: 100%;
+.wrap {
+  width: 100%;
 }
-header{
-    background: url(../images/pc_section01_3.jpg) no-repeat;
-    width: 100%;
-    height: 896px;
+header {
+  background: url(../images/pc_section01_3.jpg) no-repeat;
+  width: 100%;
+  height: 896px;
 }
-.header-inner{
-    width: 100%;
-    height: 120px;
-    padding: 45px;
-    display: flex;
-    justify-content: space-between;
+.header-inner {
+  width: 100%;
+  height: 120px;
+  padding: 45px;
+  display: flex;
+  justify-content: space-between;
 }
-.logo{
-    display: flex;
+.logo {
+  display: flex;
 }
-.menu ul{
-    list-style: none;
-    display: flex;
+.menu ul {
+  list-style: none;
+  display: flex;
 }
-.menu ul li{
-    padding: 0 30px;
-    font-size: 18px;
+.menu ul li {
+  padding: 0 30px;
+  font-size: 18px;
 }
-.big-logo{
-    /* background: url(../images/m_sec01_logo_3.png) no-repeat; */
-    background-size: cover;
-    width: 1328px;
-    height: 422px;
-    margin: 50px auto;
+.big-logo {
+  /* background: url(../images/m_sec01_logo_3.png) no-repeat; */
+  background-size: cover;
+  width: 1328px;
+  height: 422px;
+  margin: 50px auto;
+}
+.main {
+  width: 100%;
+}
+.search {
+  width: 1020px;
+  height: 80px;
+  margin: 0 auto;
+}
+.search input {
+  width: 100%;
+  height: 100%;
+  border-radius: 50px;
+  border: 1px solid #f1f1f1;
+  box-shadow: 5px 5px rgb(241, 241, 241);
+  padding-left: 100px;
+  font-size: 17px;
+  background: url(../images/search_icon.png) no-repeat left center;
+}
+.search-inner {
+}
+/* .ic-search{
+    width: 16px;
+    height: 16px;
+    
+} */
+.bt-search {
+  background-color: rgb(212, 25, 25);
+  color: #fff;
+  font-size: 14px;
+  font-weight: bold;
+  width: 180px;
+  height: 55px;
+  border: 0px;
+  border-radius: 50px;
 }
