--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
   font-weight: normal;
   font-style: normal;
 }
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -179,27 +179,119 @@ header {
   background-color: #fff;
 }
 .cs-wrap {
-  width: 80%;
+  width: 100%;
   display: flex;
   justify-content: space-around;
-  padding: 50px 20px;
+  padding: 40px 20px;
+  gap: 15px;
+  margin: 0 auto;
 }
-.cs-wrap p {
-  font-family: "Noto Sans KR", sans-serif;
-  font-size: 14px;
-  font-weight: 300;
-  margin: 10px 0;
-}
-.email {
-  width: 500px;
-  height: 250px;
-  background: url("../images/sec04_backimg01.png") no-repeat;
-  background-size: cover;
-  padding: 40px;
-}
-.email h2 {
+.cs-wrap h2 {
   font-family: "Binggrae-Two";
   color: #1f1f1f;
   font-size: 30px;
   margin: 10px 0;
 }
+.cs-wrap p {
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  margin: 10px 0;
+}
+.email {
+  width: 600px;
+  height: 300px;
+  background: url("../images/sec04_backimg01.png") no-repeat;
+  background-size: cover;
+  padding: 40px;
+  border-radius: 20px;
+}
+.cs button{
+  width: 160px;
+  height: 40px;
+  border-radius: 50px;
+  border: 0;
+  font-size: 14px;
+  line-height: 40px;
+}
+.email button{
+  background-color: rgb(211, 21, 21);
+  color: #fff;
+  margin-top: 30px;
+}
+.call {
+  width: 600px;
+  height: 300px;
+  background: url("../images/sec04_backimg02.png") no-repeat;
+  background-size: cover;
+  padding: 40px;
+  border-radius: 20px;
+}
+.call h3{
+  font-family: 'Poppins', sans-serif;
+  color: #303030;
+  font-size: 42px;
+  margin: 10px 0;
+}
+.call p{
+  margin-top: 20px;
+}
+.call span{
+  color: red;
+  font-weight: 600;
+}
+.qna-wrap{
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 30px;
+}
+.qna-head{
+  display: flex;
+  justify-content: space-between;
+}
+.qna-wrap h2{
+  font-family: "Binggrae-Two";
+  color: #1f1f1f;
+  font-size: 30px;
+}
+.qna-wrap button{
+  background-color: #fff;
+  color: #1f1f1f;
+  margin-top: 30px;
+  border: 1px solid rgba(224, 223, 226, 0.6);
+}
+.qna-box{
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  gap: 15px;
+  margin: 10px auto;
+}
+.qna-wrap ul{
+  width: 50%;
+}
+.qna-wrap ul li{
+  width: 570px;
+  height: 80px;
+  background-color: #f9f9f9;
+  color: #1f1f1f;
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: 15px;
+  border-radius: 30px;
+  box-shadow: inset 0px 5px 10px 0 rgba(121, 121, 121, 0.08);
+  margin: 10px 0;
+  padding: 30px;
+  display: flex;
+  align-items: center;
+}
+.qna-1{
+ width: 50%;
+ display: flex;
+ flex-direction: column;
+
+}
+.qna-2{
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+ }
