--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@200;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;600;700;800;900&family=Noto+Sans:wght@200;300;400;500;600;700;800;900&display=swap");
 @font-face {
   font-family: "Binggrae-Two";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/Binggrae-Bold.woff")
@@ -7,7 +7,7 @@
   font-weight: normal;
   font-style: normal;
 }
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;600;700;800;900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -26,7 +26,7 @@ ul {
 header {
   background: url(../images/pc_section01_3.jpg) no-repeat;
   width: 100%;
-  height: 896px;
+  /* height: 896px; */
 }
 .header-inner {
   width: 100%;
@@ -45,9 +45,9 @@ header {
 .menu ul li {
   padding: 0 30px;
   font-size: 18px;
+  font-family: "Noto Sans KR", sans-serif;
 }
 .big-logo {
-  /* background: url(../images/m_sec01_logo_3.png) no-repeat; */
   background-size: cover;
   width: 1328px;
   height: 422px;
@@ -57,6 +57,7 @@ header {
   width: 100%;
 }
 .search_bar {
+  font-family: "Noto Sans KR", sans-serif;
   width: 1020px;
   height: 80px;
   margin: 50px auto;
@@ -93,6 +94,7 @@ header {
 
 .taste {
   width: 100%;
+  margin-top: 100px;
 }
 .taste h1 {
   text-align: center;
@@ -206,7 +208,7 @@ header {
   padding: 40px;
   border-radius: 20px;
 }
-.cs button{
+.main button {
   width: 160px;
   height: 40px;
   border-radius: 50px;
@@ -214,7 +216,7 @@ header {
   font-size: 14px;
   line-height: 40px;
 }
-.email button{
+.email button {
   background-color: rgb(211, 21, 21);
   color: #fff;
   margin-top: 30px;
@@ -227,50 +229,50 @@ header {
   padding: 40px;
   border-radius: 20px;
 }
-.call h3{
-  font-family: 'Poppins', sans-serif;
+.call h3 {
+  font-family: "Poppins", sans-serif;
   color: #303030;
   font-size: 42px;
   margin: 10px 0;
 }
-.call p{
+.call p {
   margin-top: 20px;
 }
-.call span{
+.call span {
   color: red;
   font-weight: 600;
 }
-.qna-wrap{
+.qna-wrap {
   width: 100%;
   margin: 0 auto;
   padding: 0 30px;
 }
-.qna-head{
+.qna-head {
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
 }
-.qna-wrap h2{
+.qna-wrap h2 {
   font-family: "Binggrae-Two";
   color: #1f1f1f;
   font-size: 30px;
 }
-.qna-wrap button{
+.qna-wrap button {
   background-color: #fff;
   color: #1f1f1f;
-  margin-top: 30px;
   border: 1px solid rgba(224, 223, 226, 0.6);
 }
-.qna-box{
+.qna-box {
   width: 100%;
   display: flex;
   justify-content: space-around;
   gap: 15px;
   margin: 10px auto;
 }
-.qna-wrap ul{
+.qna-wrap ul {
   width: 50%;
 }
-.qna-wrap ul li{
+.qna-wrap ul li {
   width: 570px;
   height: 80px;
   background-color: #f9f9f9;
@@ -284,14 +286,121 @@ header {
   display: flex;
   align-items: center;
 }
-.qna-1{
- width: 50%;
- display: flex;
- flex-direction: column;
-
-}
-.qna-2{
+.qna-1 {
   width: 50%;
   display: flex;
   flex-direction: column;
- }
+}
+.qna-2 {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+.report {
+  width: 100%;
+  margin-top: 100px;
+}
+.report h1 {
+  text-align: center;
+  font-family: "Binggrae-Two";
+  font-size: 40px;
+  margin: 20px auto;
+  color: #1f1f1f;
+  line-height: 1.45;
+  letter-spacing: -1.9px;
+}
+.report-wrap {
+  width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+  gap: 15px;
+}
+.report-wrap p {
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  text-align: center;
+}
+.report-wrap button {
+  background-color: rgb(211, 21, 21);
+  color: #fff;
+}
+.report-1 {
+  width: 600px;
+  height: 230px;
+  background-color: #f9f9f9;
+  padding: 50px;
+  border-radius: 30px;
+  box-shadow: inset 0px 5px 10px 0 rgba(121, 121, 121, 0.08);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+footer {
+  width: 100%;
+  background-color: #303030;
+  margin-top: 100px;
+  padding: 50px;
+  font-family: "Noto Sans KR", sans-serif;
+}
+footer ul {
+  list-style: none;
+  text-decoration: none;
+}
+.ft-top {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+.ft-logo {
+  background: url(../images/f_logo.png) no-repeat;
+  background-size: cover;
+  width: 113px;
+  height: 30px;
+}
+.ft-top ul {
+  width: 200px;
+  display: flex;
+  justify-content: space-around;
+}
+.ft-top ul li a {
+  font-size: 14px;
+  font-weight: bold;
+  color: #5f5f5f;
+}
+.ft-md {
+  width: 100%;
+  color: #999;
+  font-size: 15px;
+  line-height: 30px;
+  margin-bottom: 100px;
+}
+.ft-bt {
+  display: flex;
+  align-items: flex-end;
+  flex-direction: row-reverse;
+}
+.ft-icon {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  gap: 10px;
+}
+.ft-icon li a {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 0;
+  background-color: #1f1f1f;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  color: #fff;
+}
+.ft-icon li a img {
+  width: 20px;
+}
