--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,8 @@ ul {
   width: 100%;
 }
 header {
-  background: url(../images/pc_section01_3.jpg) no-repeat;
+  background: url(../images/pc_section01_3.jpg) no-repeat center;
+  background-size: cover;
   width: 100%;
   /* height: 896px; */
 }
@@ -44,7 +45,8 @@ header {
 }
 .menu ul li {
   padding: 0 30px;
-  font-size: 18px;
+  font-size: 20px;
+  font-weight: 500;
   font-family: "Noto Sans KR", sans-serif;
 }
 .big-logo {
@@ -94,9 +96,17 @@ header {
 }
 
 .taste {
-  width: 100%;
+  position: relative;
+  width: 1450px;
+  height: 400px;
   margin-top: 100px;
+  margin: auto;
 }
+/* .tasteSwiper {
+  width: 1300px;
+  height: 400px;
+} */
+
 .taste h1 {
   text-align: center;
   font-family: "Binggrae-Two";
@@ -106,22 +116,28 @@ header {
   line-height: 1.45;
   letter-spacing: -1.9px;
 }
-.taste-inner {
-  width: 80%;
+.tasteSwiper ul {
+  /* width: 1200px; */
+  padding: 0 50px;
   display: flex;
-  justify-content: center;
-  margin: 0 auto;
+  background-color: yellowgreen;
+  /* justify-content: start; */
 }
-.taste-inner li {
-  margin: 10px 10px;
+.tasteSwiper ul li {
+  /* margin: 10px; */
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  /* max-width: 90%; */
 }
-.taste-inner img {
+.tasteSwiper ul img {
   width: 200px;
   height: 200px;
   margin-bottom: 10px;
 }
-.taste-inner p {
+.tasteSwiper ul li p {
   font-family: "Noto Sans KR", sans-serif;
   font-weight: 400;
   width: 200px;
@@ -130,6 +146,25 @@ header {
   background-color: rgb(247, 247, 247);
   border: 0;
   border-radius: 20px;
+}
+.prev{
+  position: absolute;
+  top: 50%;
+  left:0px;
+  width: 40px;
+  height: 40px;
+  z-index: 9999;
+  font-size: 25px;
+}
+.next{
+  position: absolute;
+  top: 50%;
+  right: -30px;
+  width: 40px;
+  height: 40px;
+  z-index: 9999;
+  font-size: 25px;
+
 }
 .brandshop {
   width: 100%;
@@ -280,7 +315,7 @@ header {
   background-color: #f9f9f9;
   color: #1f1f1f;
   font-family: "Noto Sans KR", sans-serif;
-  font-size: 15px;
+  font-size: 16px;
   border-radius: 30px;
   box-shadow: inset 0px 5px 10px 0 rgba(121, 121, 121, 0.08);
   margin: 10px 0;
@@ -342,7 +377,7 @@ header {
 }
 footer {
   width: 100%;
-  background-color: #303030;
+  background-color: #272727;
   margin-top: 100px;
   padding: 50px;
   font-family: "Noto Sans KR", sans-serif;
@@ -389,20 +424,21 @@ footer ul {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  gap: 10px;
+  gap: 30px;
 }
 .ft-icon li a {
-  width: 50px;
-  height: 50px;
+  width: 80px;
+  height: 80px;
   border-radius: 50%;
   border: 0;
   background-color: #1f1f1f;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 20px;
+  font-size: 35px;
   color: #fff;
+  box-shadow: 0px 4px 8px 1px rgba(0, 0, 0, 0.36);
 }
 .ft-icon li a img {
-  width: 20px;
+  width: 35px;
 }
