--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,9 +1,41 @@
 @charset "utf-8";
-@media all (max-width: 1300px) {
-  /* header {
-    background-size: 1300px;
-  }
-  .big-logo{
-    background-position: center;
-  } */
+@media all and (max-width: 768px) {
+.big-logo img{
+  display: block;
+  width: 600px;
+  height: 260px;
+  margin: 0;
+}
+.menu{
+  display: none;
+}
+.search_bar{
+  width: 500px;
+  height: 50px;
+}
+.taste{
+  width:700px;
+  background-color: yellowgreen;
+}
+.tasteSwiper .swiper-slide img {
+  width: 100px;
+}
+.tasteSwiper .swiper-slide {
+width: 100px !important;
+}
+.tasteSwiper .swiper-slide p{
+  width: 100px;
+}
+.tasteSwiper{
+  width: 700px;
+}
+.swiper-wrapper{
+  /* width: 100%; */
+  justify-content: center;
+  align-items: baseline;
+}
+.taste-box{
+  width: 700px;
+}
+
 }
