--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,15 @@ header {
   background-size: cover;
   width: 100%;
 }
+h1{
+  text-align: center;
+  font-family: "Binggrae-Two";
+  font-size: 40px;
+  margin: 20px auto;
+  color: #1f1f1f;
+  line-height: 1.45;
+  letter-spacing: -1.9px;
+}
 .header-inner {
   width: 100%;
   height: 120px;
@@ -48,11 +57,14 @@ header {
   font-weight: 500;
   font-family: "Noto Sans KR", sans-serif;
 }
+.menu i{
+  display: none;
+}
 .big-logo {
   background-size: cover;
   width: 80%;
   height: 422px;
-  margin: 50px auto;
+  margin: 0 auto;
   display: flex;
   justify-content: center;
 }
@@ -95,12 +107,12 @@ header {
   height: 30px;
   margin: 7px 20px;
 }
-
 .taste {
   width: 100%;
+  max-height: 300px;
   margin-top: 200px;
 }
-.taste h1 {
+/* .taste h1 {
   text-align: center;
   font-family: "Binggrae-Two";
   font-size: 40px;
@@ -108,7 +120,7 @@ header {
   color: #1f1f1f;
   line-height: 1.45;
   letter-spacing: -1.9px;
-}
+} */
 .taste-box {
   position: relative;
   width: 1450px;
@@ -178,7 +190,7 @@ header {
   margin: 0 auto;
   /* background-color: violet; */
 }
-.brandshop h1 {
+/* .brandshop h1 {
   text-align: center;
   font-family: "Binggrae-Two";
   font-size: 40px;
@@ -186,7 +198,7 @@ header {
   color: #1f1f1f;
   line-height: 1.45;
   letter-spacing: -1.9px;
-}
+} */
 .brandSwiper {
   width: 1300px;
   display: flex;
@@ -225,7 +237,7 @@ header {
   width: 100%;
   margin-top: 100px;
 }
-.cs h1 {
+/* .cs h1 {
   text-align: center;
   font-family: "Binggrae-Two";
   font-size: 40px;
@@ -233,10 +245,10 @@ header {
   color: #1f1f1f;
   line-height: 1.45;
   letter-spacing: -1.9px;
-}
+} */
 .cs-inner {
-  background-color: antiquewhite;
-  width: 1200px;
+  /* background-color: antiquewhite; */
+  width: 65%;
   height: 800px;
   margin: 0 auto;
   border: 1px solid #ccc;
@@ -265,12 +277,15 @@ header {
   margin: 10px 0;
 }
 .email {
-  width: 600px;
+  width: calc(100% / 2 - 10px);
   height: 300px;
   background: url("../images/sec04_backimg01.png") no-repeat;
   background-size: cover;
   padding: 40px;
   border-radius: 20px;
+}
+.email-p-2{
+  display: none;
 }
 .main button {
   font-family: "Noto Sans KR", sans-serif;
@@ -287,7 +302,7 @@ header {
   margin-top: 30px;
 }
 .call {
-  width: 600px;
+  width: calc(100% / 2 - 10px);
   height: 300px;
   background: url("../images/sec04_backimg02.png") no-repeat;
   background-size: cover;
@@ -335,10 +350,10 @@ header {
   margin: 10px auto;
 }
 .qna-wrap ul {
-  width: 50%;
+  width: calc(100% / 2 - 10px);
 }
 .qna-wrap ul li {
-  width: 570px;
+  width: 100%;
   height: 80px;
   background-color: #f9f9f9;
   color: #1f1f1f;
@@ -361,11 +376,14 @@ header {
   display: flex;
   flex-direction: column;
 }
+.qna-3{
+  display: none;
+}
 .report {
   width: 100%;
   margin-top: 100px;
 }
-.report h1 {
+/* .report h1 {
   text-align: center;
   font-family: "Binggrae-Two";
   font-size: 40px;
@@ -373,9 +391,10 @@ header {
   color: #1f1f1f;
   line-height: 1.45;
   letter-spacing: -1.9px;
-}
+} */
 .report-wrap {
-  width: 1200px;
+  width: 100%;
+  max-width: 1200px;
   margin: 0 auto;
   display: flex;
   justify-content: space-around;
@@ -392,7 +411,7 @@ header {
   color: #fff;
 }
 .report-1 {
-  width: 600px;
+  width:  calc( 100% / 2 );
   height: 230px;
   background-color: #f9f9f9;
   padding: 50px;
