--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,8 @@
 @charset "utf-8";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;600;700;800;900&family=Noto+Sans:wght@200;300;400;500;600;700;800;900&display=swap");
 @font-face {
-  font-family: "Binggrae-Two";
-  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/Binggrae-Bold.woff")
-    format("woff");
+  font-family: 'Binggrae';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/Binggrae.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
@@ -30,8 +29,9 @@ header {
 }
 h1{
   text-align: center;
-  font-family: "Binggrae-Two";
+  font-family: "Binggrae";
   font-size: 40px;
+  font-weight: 700;
   margin: 20px auto;
   color: #1f1f1f;
   line-height: 1.45;
@@ -265,9 +265,10 @@ h1{
   margin: 0 auto;
 }
 .cs-wrap h2 {
-  font-family: "Binggrae-Two";
+  font-family: "Binggrae";
   color: #1f1f1f;
   font-size: 30px;
+  font-weight: 700;
   margin: 10px 0;
 }
 .cs-wrap p {
@@ -333,7 +334,8 @@ h1{
   align-items: flex-end;
 }
 .qna-wrap h2 {
-  font-family: "Binggrae-Two";
+  font-family: "Binggrae";
+  font-weight: 700;
   color: #1f1f1f;
   font-size: 30px;
 }
