--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,231 +1,230 @@
 @charset "utf-8";
 @media all and (max-width: 768px) {
-  header{
+  header {
     background-position: right;
     height: 500px;
   }
-  .big-logo{
+  .big-logo {
     height: auto;
   }
-  .big-logo img{
-  display: block;
-  width: 630px;
-  height: 230px;
-}
-.menu ul {
-  display: none;
-}
-.menu i{
-  display: block;
-  font-size: 30px;
-  margin-right: 30px;
-}
-.search_bar{
-  width: 500px;
-  height: 50px;
-  margin-top: 100px;
-}
-.fa-magnifying-glass {
-  width: 20px;
-  height: 20px;
-  /* margin: 5px 10px 2px 10px; */
-}
-.search_bar input {
-  width: 85%;
-  font-size: 13px;
-}
-.search_bar button {
-  font-size: 14px;
-  font-weight: 600;
-  width: 150px;
-  height: 42px;
-}
-h1{
-  font-size: 30px;
-  font-weight: 300;
-}
-.taste{
-  width:700px;
-  margin-top: 100px;
-  /* background-color: yellowgreen; */
-}
-.tasteSwiper .swiper-slide img {
-  width: 100px;
-}
-.tasteSwiper .swiper-slide {
-width: 100px !important;
-}
-.tasteSwiper .swiper-slide p{
-  width: 100px;
-  font-size: 13px;
-}
-.tasteSwiper{
-  width: 700px;
-}
-.swiper-wrapper{
-  /* width: 100%; */
-  justify-content: center;
-  align-items: baseline;
-}
-.taste-box{
-  width: 700px;
-}
-.brandshop{
-  width:700px;
-  margin-top: 100px;
-  /* background-color: yellowgreen; */
-}
-.brandSwiper .swiper-slide img {
-  width: 100px;
-}
-.brandSwiper .swiper-slide {
-width: 100px !important;
-}
-.brandSwiper{
-  width: 700px;
-}
-.brandshop-box{
-  width: 700px;
-}
-.cs {
-  margin-top: 100px;
-}
-.cs-inner{
-  width: 100%;
-  height: auto;
-  padding: 20px;
-}
-.cs-wrap{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0;
-  margin-top: 30px;
-}
-.cs-wrap h2 {
-  font-size: 20px;
-  margin-left: 30px;
-  margin-top: 20px;
-
-}
-.cs-wrap p {
-  font-size: 14px;
-  font-weight: 400;
-  margin: 10px 30px;
-}
-.email{
-  width: 100%;
-  height: 130px;
-  background: url("../images/m_sec04_backimg01.png") no-repeat center;
-  background-size: cover;
-  padding: 0;
-}
-.email-p-1{
-  display: none;
-}
-.email-p-2{
-  display: block;
-}
-.email button{
-  display: none;
-}
-.call{
-  width: 100%;
-  height: 130px;
-  background: url("../images/m_sec04_backimg02.png") no-repeat center;
-  background-size: cover;
-  padding: 0;
-}
-.call h3{
-  font-size: 20px;
-  margin: 0 30px;
-}
-.call p{
-  margin-top: 1px;
-}
-.qna-wrap {
-  margin: 20px auto;
-  padding: 0;
-}
-.qna-head{
-  margin-top: 60px;
-  margin-bottom: 30px;
-}
-.qna-wrap h2{
-  font-size: 18px;
-}
-.qna-wrap button{
-  width: 90px;
-  height: 33px;
-  line-height: 33px;
-  font-size: 13px;
-}
-.qna-box{
-  flex-direction: column;
-  margin: 0 auto;
-}
-.qna-wrap ul{
-  width: 100%;
-}
-.qna-wrap ul li{
-  width: 100%;
-  height: 50px;
-  border-radius: 15px;
-  font-size: 14px;
-  margin: 10px 0;
-  padding: 10px 30px;
-}
-.qna-1{
-  display: none;
+  .big-logo img {
+    display: block;
+    width: 630px;
+    height: 230px;
   }
-.qna-2{
-  display: none;
-}
-.qna-3{
-  display: block;
-}
-.report-wrap{
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 50px;
-}
-.report-wrap p{
-  font-size: 14px;
-}
-.report-1{
-  width: 100%;
-}
-.ft-top{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-}
-.ft-top ul{
-  justify-content: space-evenly
-}
-.ft-top ul li a{
-  font-size: 10px;
-}
-.ft-md{
-  text-align: center;
-  font-size: 10px;
-  line-height: 15px;
-}
-.ft-icon li a {
-  width: 40px;
-  height: 40px;
-  font-size: 20px;
-}
-.ft-icon {
-  gap: 15px;
-}
-.ft-icon li a img {
-  width: 20px;
-}
-.ft-bt{
-  justify-content: center
-}
+  .menu ul {
+    display: none;
+  }
+  .menu i {
+    display: block;
+    font-size: 30px;
+    margin-right: 30px;
+  }
+  .search_bar {
+    width: 500px;
+    height: 50px;
+    margin-top: 100px;
+  }
+  .fa-magnifying-glass {
+    width: 20px;
+    height: 20px;
+    /* margin: 5px 10px 2px 10px; */
+  }
+  .search_bar input {
+    width: 85%;
+    font-size: 13px;
+  }
+  .search_bar button {
+    font-size: 14px;
+    font-weight: 600;
+    width: 150px;
+    height: 42px;
+  }
+  h1 {
+    font-size: 30px;
+    font-weight: 300;
+  }
+  .taste {
+    width: 700px;
+    margin-top: 100px;
+    /* background-color: yellowgreen; */
+  }
+  .tasteSwiper .swiper-slide img {
+    width: 100px;
+  }
+  .tasteSwiper .swiper-slide {
+    width: 100px !important;
+  }
+  .tasteSwiper .swiper-slide p {
+    width: 100px;
+    font-size: 13px;
+  }
+  .tasteSwiper {
+    width: 700px;
+  }
+  .swiper-wrapper {
+    /* width: 100%; */
+    justify-content: center;
+    align-items: baseline;
+  }
+  .taste-box {
+    width: 700px;
+  }
+  .brandshop {
+    width: 700px;
+    margin-top: 100px;
+    /* background-color: yellowgreen; */
+  }
+  .brandSwiper .swiper-slide img {
+    width: 100px;
+  }
+  .brandSwiper .swiper-slide {
+    width: 100px !important;
+  }
+  .brandSwiper {
+    width: 700px;
+  }
+  .brandshop-box {
+    width: 700px;
+  }
+  .cs {
+    margin-top: 100px;
+  }
+  .cs-inner {
+    width: 100%;
+    height: auto;
+    padding: 20px;
+  }
+  .cs-wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+    margin-top: 30px;
+  }
+  .cs-wrap h2 {
+    font-size: 20px;
+    margin-left: 30px;
+    margin-top: 20px;
+  }
+  .cs-wrap p {
+    font-size: 14px;
+    font-weight: 400;
+    margin: 10px 30px;
+  }
+  .email {
+    width: 100%;
+    height: 130px;
+    background: url("../images/m_sec04_backimg01.png") no-repeat center;
+    background-size: cover;
+    padding: 0;
+  }
+  .email-p-1 {
+    display: none;
+  }
+  .email-p-2 {
+    display: block;
+  }
+  .email button {
+    display: none;
+  }
+  .call {
+    width: 100%;
+    height: 130px;
+    background: url("../images/m_sec04_backimg02.png") no-repeat center;
+    background-size: cover;
+    padding: 0;
+  }
+  .call h3 {
+    font-size: 20px;
+    margin: 0 30px;
+  }
+  .call p {
+    margin-top: 1px;
+  }
+  .qna-wrap {
+    margin: 20px auto;
+    padding: 0;
+  }
+  .qna-head {
+    margin-top: 60px;
+    margin-bottom: 30px;
+  }
+  .qna-wrap h2 {
+    font-size: 18px;
+  }
+  .qna-wrap button {
+    width: 90px;
+    height: 33px;
+    line-height: 33px;
+    font-size: 13px;
+  }
+  .qna-box {
+    flex-direction: column;
+    margin: 0 auto;
+  }
+  .qna-wrap ul {
+    width: 100%;
+  }
+  .qna-wrap ul li {
+    width: 100%;
+    height: 50px;
+    border-radius: 15px;
+    font-size: 14px;
+    margin: 10px 0;
+    padding: 10px 30px;
+  }
+  .qna-1 {
+    display: none;
+  }
+  .qna-2 {
+    display: none;
+  }
+  .qna-3 {
+    display: block;
+  }
+  .report-wrap {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+  }
+  .report-wrap p {
+    font-size: 14px;
+  }
+  .report-1 {
+    width: 100%;
+  }
+  .ft-top {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+  .ft-top ul {
+    justify-content: space-evenly;
+  }
+  .ft-top ul li a {
+    font-size: 10px;
+  }
+  .ft-md {
+    text-align: center;
+    font-size: 10px;
+    line-height: 15px;
+  }
+  .ft-icon li a {
+    width: 40px;
+    height: 40px;
+    font-size: 20px;
+  }
+  .ft-icon {
+    gap: 15px;
+  }
+  .ft-icon li a img {
+    width: 20px;
+  }
+  .ft-bt {
+    justify-content: center;
+  }
 }
