--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,17 +1,5 @@
 @charset "utf-8";
-@media all and (max-width: 768px) {
-  header {
-    background-position: right;
-    height: 500px;
-  }
-  .big-logo {
-    height: auto;
-  }
-  .big-logo img {
-    display: block;
-    width: 630px;
-    height: 230px;
-  }
+@media all and (max-width: 1200px) {
   .menu ul {
     display: none;
   }
@@ -20,14 +8,44 @@
     font-size: 30px;
     margin-right: 30px;
   }
+  .taste .prev{
+    font-size: 20px;
+  }
+  .taste .next{
+    font-size: 20px;
+  }
+  .brandshop .prev{
+    font-size: 20px;
+  }
+  .brandshop .next{
+    font-size: 20px;
+  }
+}
+@media all and (max-width: 768px) {
+  header {
+    background-position: right;
+    height: 500px;
+  }
+  h1 {
+    font-size: 30px;
+  }
+  .big-logo {
+    height: auto;
+    margin-top: 50px;
+  }
+  .big-logo img {
+    display: block;
+    width: 100%;
+    /* height: 230px; */
+  }
   .search_bar {
-    width: 500px;
-    height: 50px;
     margin-top: 100px;
+    height: auto;
   }
   .fa-magnifying-glass {
     width: 20px;
     height: 20px;
+    margin-top: 15px;
     /* margin: 5px 10px 2px 10px; */
   }
   .search_bar input {
@@ -40,48 +58,9 @@
     width: 150px;
     height: 42px;
   }
-  .taste {
-    width: 700px;
-    margin-top: 100px;
-    /* background-color: yellowgreen; */
-  }
-  /* .tasteSwiper .swiper-slide img {
-    width: 100px;
-  }
-  .tasteSwiper .swiper-slide {
-    width: 100px !important;
-  }
-  .tasteSwiper .swiper-slide p {
-    width: 100px;
-    font-size: 13px;
-  }
-  .tasteSwiper {
-    width: 700px;
-  } */
-  .swiper-wrapper {
-    /* width: 100%; */
-    justify-content: center;
-    align-items: baseline;
-  }
-  .taste-box {
-    width: 700px;
-  }
-  .brandshop {
-    width: 700px;
-    margin-top: 100px;
-    /* background-color: yellowgreen; */
-  }
-  .brandSwiper .swiper-slide img {
-    width: 100px;
-  }
-  .brandSwiper .swiper-slide {
-    width: 100px !important;
-  }
-  .brandSwiper {
-    width: 700px;
-  }
-  .brandshop-box {
-    width: 700px;
+  .swiper-slide p{
+    font-size: 14px;
+    line-height: 25px;
   }
   .cs {
     margin-top: 100px;
@@ -184,7 +163,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
   }
   .report-wrap p {
     font-size: 14px;
@@ -222,5 +200,78 @@
   }
   .ft-bt {
     justify-content: center;
+  }
+}
+@media all and (max-width: 320px){
+  header{
+    max-height: 300px;
+  }
+  .header-inner{
+    padding: 20px;
+  }
+  .logo a img{
+    width: 60%;
+  }
+  .menu .fas{
+    font-size: 20px;
+  }
+  .search_bar{
+    min-width: 300px;
+    max-height: 40px;
+    margin-top: 70px;
+  }
+  .search_bar input{
+    font-size: 12px;
+  }
+  .search_bar button{
+    max-height: 30px;
+    font-size: 12px;
+    font-weight: 500;
+  }
+  .fa-magnifying-glass {
+    width: 17px;
+    height: 17px;
+    margin: 0 10px;
+    margin-top: 6px;
+  }
+  .main{
+    width: 100%;
+  }
+  h1{
+    font-size: 25px;
+  }
+  .swiper-slide p{
+    margin-top: 2px;
+    font-size: 12px;
+    line-height: 18px;
+  }
+  .cs-inner {
+    padding: 10px;
+  }
+  .cs-wrap{
+    margin-top: 20px;
+  }
+  .cs-wrap h2{
+    font-size: 18px;
+    margin-left: 20px;
+    margin-top: 20px;
+  }
+  .cs-wrap p {
+    font-size: 12px;
+    font-weight: 400;
+    margin: 10px 20px;
+  }
+  .call h3{
+    font-size: 18px;
+    margin-left: 20px;
+  }
+  .qna-head{
+    align-items: center
+  }
+  .qna-wrap button{
+    width: 120px;
+    font-size: 12px;
+    height: 25px;
+    line-height: 25px;
   }
 }
