--- a/css/responsive.css
+++ b/css/responsive.css
@@ -29,6 +29,9 @@
   h1 {
     font-size: 30px;
   }
+  .menu{
+    width: 30px;
+  }
   .big-logo {
     height: auto;
     margin-top: 50px;
@@ -47,6 +50,9 @@
     height: 20px;
     margin-top: 15px;
     /* margin: 5px 10px 2px 10px; */
+  }
+  .search_bar{
+    height: 52px;
   }
   .search_bar input {
     width: 85%;
@@ -219,8 +225,8 @@
     font-size: 20px;
   }
   .search_bar{
-    min-width: 300px;
-    max-height: 40px;
+    min-width: 280px;
+    height: 38px;
     margin-top: 70px;
   }
   .search_bar input{
@@ -247,6 +253,10 @@
     margin-top: 2px;
     font-size: 12px;
     line-height: 18px;
+  }
+  .taste{
+    padding-bottom: 50px;
+    border-bottom: 5px solid rgba(0,0,0,0.05);
   }
   .cs-inner {
     padding: 10px;
