--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
   font-weight: normal;
   font-style: normal;
 }
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;600;700;800;900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -42,28 +42,61 @@ h1 {
   width: 100%;
   max-height: 120px;
   padding: 45px;
+  position: relative;
   display: flex;
   justify-content: space-between;
 }
 .logo {
-  /* display: flex; */
+  display: flex;
 }
-.menu ul {
+
+.menu-main {
   list-style: none;
   display: flex;
 }
-.menu ul li {
+.menu-main li{
+  display: flex;
+  flex-direction: row;
   padding: 0 30px;
   font-size: 20px;
   font-weight: 500;
   font-family: "Noto Sans KR", sans-serif;
 }
-.menu i {
+.fas {
   display: none;
-}
-.menu .fas {
   font-size: 30px;
   color: #222;
+}
+.menu-sub{
+  display: none;
+  background-color: #fff;
+  width: 300px;
+  height: 700px;
+  border: 5px solid rgb(187, 0, 0);
+  border-radius: 20px;
+  position: absolute;
+  top: 65%;
+  right: 4%;
+  padding: 15px 40px;
+}
+.menu-sub li{
+  display: flex;
+  align-items: center;
+  border-bottom: 3px solid rgba(0, 0, 0, 0.05);
+}
+.menu-sub li:last-child{
+  border-bottom: 0
+}
+.menu-sub li a{
+  width: 100%;
+  font-family: "Noto Sans KR", sans-serif;
+  color: #111;
+  font-size: 20px;
+  font-weight: 700;
+  text-align: center;
+  margin: 40px;
+  
+
 }
 .big-logo {
   background-size: cover;
