--- a/css/responsive.css
+++ b/css/responsive.css
@@ -6,12 +6,14 @@
   .menu-main li {
     display: none;
   }
-  .fas {
+  .menu .open {
     display: block;
-    font-size: 30px;
     margin-right: 30px;
   }
   .menu-sub.active{
+    display: block;
+  }
+  .close.active{
     display: block;
   }
   .taste .prev {
@@ -227,8 +229,22 @@
   .menu {
     width: 20px;
   }
-  .fas {
+  .open {
     font-size: 20px;
+  }
+  .menu-sub{
+    width: 50%;
+    padding: 100px 20px;
+  }
+  .menu-sub li a{
+    font-size: 14px;  
+    margin: 20px;
+  }
+  .close{
+    width: 20px;
+    height: 20px;
+    top: 20px;
+    right: 22px;
   }
   .search_bar {
     min-width: 280px;
@@ -260,10 +276,10 @@
     font-size: 12px;
     line-height: 18px;
   }
-  .taste {
+  /* .taste {
     padding-bottom: 50px;
     border-bottom: 5px solid rgba(0, 0, 0, 0.05);
-  }
+  } */
   .cs-inner {
     padding: 10px;
   }
